fix dark mode display

--- a/src/styles/components/jobDetail.scss
+++ b/src/styles/components/jobDetail.scss
@@ -174,7 +174,7 @@
     }
 
     p strong {
-        color: $white;
+        color: $white !important;
     }
 }
 
